# fRNG

./: .gitignore  CMakeLists.txt  LICENSE.md
cmake/: fRNG_config.cmake.in
include/fRNG/: CMakeLists.txt  demo.cc  distribution_sim.cc  falk_rng.hh  falk_rng_PRE_POLYMORPHISM.hh  info.h  info.hh  info.hh.in  tmp_test.cc
